@@ -160,7 +160,7 @@ typedef enum libspectrum_id_t {
   LIBSPECTRUM_ID_HARDDISK_HDF,		/* .hdf hard disk image */
   LIBSPECTRUM_ID_CARTRIDGE_IF2,		/* .rom Interface II cartridge image */
 
-  /* Below here, present only in [FIXME] and later */
+  /* Below here, present only in 0.3.0 and later */
 
   LIBSPECTRUM_ID_MICRODRIVE_MDR,	/* .mdr microdrive cartridge */
   LIBSPECTRUM_ID_TAPE_CSW,		/* .csw tape image */
@@ -189,7 +189,7 @@ typedef enum libspectrum_class_t {
   LIBSPECTRUM_CLASS_HARDDISK,		/* A hard disk image */
   LIBSPECTRUM_CLASS_CARTRIDGE_IF2,	/* Interface II cartridges */
 
-  /* Below here, present only in [FIXME] and later */
+  /* Below here, present only in 0.3.0 and later */
 
   LIBSPECTRUM_CLASS_MICRODRIVE,		/* Microdrive cartridges */
 
@@ -714,19 +714,7 @@ libspectrum_rzx_write( libspectrum_byte **buffer, size_t *length,
 
 libspectrum_error WIN32_DLL libspectrum_rzx_alloc( libspectrum_rzx **rzx );
 
-/*** Routines for Z80Em raw tape format files ***/
-
-libspectrum_error
-libspectrum_z80em_read( libspectrum_tape *tape,
-			const libspectrum_byte *buffer, size_t length );
-
-/*** Routines for CSW raw tape format files ***/
-
-libspectrum_error
-libspectrum_csw_read( libspectrum_tape *tape,
-		      const libspectrum_byte *buffer, size_t length );
-
-/* Something to step through all the blocks in a tape */
+/* Something to step through all the blocks in an input recording */
 typedef struct _GSList *libspectrum_rzx_iterator;
 
 /* The block types which can appear in RZX files */
@@ -752,17 +740,6 @@ libspectrum_rzx_block_id WIN32_DLL
 libspectrum_rzx_iterator_get_type( libspectrum_rzx_iterator it );
 size_t WIN32_DLL
 libspectrum_rzx_iterator_get_frames( libspectrum_rzx_iterator it );
-
-/*** Routines for Z80Em and CSW raw tape files ***/
-
-libspectrum_error WIN32_DLL
-libspectrum_z80em_create( libspectrum_tape *tape,
-			  const libspectrum_byte *buffer,
-			  const size_t length );
-
-libspectrum_error WIN32_DLL
-libspectrum_csw_create( libspectrum_tape *tape,
-			const libspectrum_byte *buffer, const size_t length );
 
 /*
  * Microdrive image handling routines
