@@ -378,3 +378,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 well as the pilot.
 20070117 microdrive.c: fix up checksum calculation (patch #1637011)
          (Gergely Szasz).
+20070119 libspectrum.h.in,libspectrum.txt: tidy up and document in
+	 preparation for a release.
